# cu2m-backend

./: (CU)2M Design and Implementation.md  .dockerignore  .gitignore  Debug.Dockerfile  Dockerfile  Dockerfile.prod  Email-Key.csv  README.md  batch_pre_create_key.py  cli.py  courses_test.json  docker-compose.workflow.yaml  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt  run_server.sh  run_test.sh
.github/workflows/: pytest.yml
docs/health/: health.yml  root.yml
docs/user/: forgot_password.yml  login.yml  logout.yml  me.yml  reset_password.yml  signup.yml  verify_token.yml
flaskr/: __init__.py  db.py  models.py  utils.py
flaskr/api/: APIException.py  APIExceptions.py  __init__.py  auth_guard.py  course_plans.py  courses.py  docs.py  email_service.py  errors.py  exceptions.py  health.py  ping.py  reqmodels.py  respmodels.py  semester_plan.py  semester_plans.py  semesterplan.py  user.py
flaskr/db/: course_plans.py  courses.py  crud.py  database.py  models.py  semester_plans.py  semesterplan.py  user.py
tests/: conftest.py  test_User_payload.py  test_api_course_plans.py  test_api_courses.py  test_api_semester_plans.py  test_api_user.py  test_availability.py  test_db_course_plans.py  test_db_courses.py  test_db_semester_plans.py  test_db_user.py  test_semesterplan.py  test_utils.py  utils.py
